syntax = "proto3";

option csharp_namespace = "Orders";

package shippings;

service ProductShipment {
  rpc SendOrder (SendOrderRequest) returns (SendOrderReply);
}

message SendOrderRequest {
  string productId = 1;
  int32 quantity = 2;
  string address = 3;
}
 
message SendOrderReply {
   
}